vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_component_configuration.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  for rtl(0)\n    for inst : lib.pkg.comp\n    end for;\n    for inst1, inst2, inst3 : lib2.pkg.comp\n    end for;\n    for all : lib3.pkg.comp\n    end for;\n    for others : lib4.pkg.comp\n    end for;\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'entity_name'
    Keyword(Is)
  BlockConfiguration
    BlockConfigurationPreamble
      Keyword(For)
      Name
        NameDesignatorPrefix
          Identifier 'rtl'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '0'
          RightPar
    ComponentConfiguration
      ComponentConfigurationPreamble
        Keyword(For)
        ComponentSpecification
          InstantiationListList
            Identifier 'inst'
          Colon
          Name
            NameDesignatorPrefix
              Identifier 'lib'
            SelectedName
              Dot
              Identifier 'pkg'
            SelectedName
              Dot
              Identifier 'comp'
      ComponentConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    ComponentConfiguration
      ComponentConfigurationPreamble
        Keyword(For)
        ComponentSpecification
          InstantiationListList
            Identifier 'inst1'
            Comma
            Identifier 'inst2'
            Comma
            Identifier 'inst3'
          Colon
          Name
            NameDesignatorPrefix
              Identifier 'lib2'
            SelectedName
              Dot
              Identifier 'pkg'
            SelectedName
              Dot
              Identifier 'comp'
      ComponentConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    ComponentConfiguration
      ComponentConfigurationPreamble
        Keyword(For)
        ComponentSpecification
          InstantiationListAll
            Keyword(All)
          Colon
          Name
            NameDesignatorPrefix
              Identifier 'lib3'
            SelectedName
              Dot
              Identifier 'pkg'
            SelectedName
              Dot
              Identifier 'comp'
      ComponentConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    ComponentConfiguration
      ComponentConfigurationPreamble
        Keyword(For)
        ComponentSpecification
          InstantiationListOthers
            Keyword(Others)
          Colon
          Name
            NameDesignatorPrefix
              Identifier 'lib4'
            SelectedName
              Dot
              Identifier 'pkg'
            SelectedName
              Dot
              Identifier 'comp'
      ComponentConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    BlockConfigurationEpilogue
      Keyword(End)
      Keyword(For)
      SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
