vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_component_configuration_vunit_binding_indication.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  for rtl(0)\n    for inst : lib.pkg.comp\n      use entity work.bar;\n      use vunit baz;\n      for arch\n      end for;\n    end for;\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'entity_name'
    Keyword(Is)
  ConfigurationDeclarationItems
    BlockConfiguration
      BlockConfigurationPreamble
        Keyword(For)
        Name
          NameDesignatorPrefix
            Identifier 'rtl'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      ComponentConfiguration
        ComponentConfigurationPreamble
          Keyword(For)
          ComponentSpecification
            InstantiationListList
              Identifier 'inst'
            Colon
            Name
              NameDesignatorPrefix
                Identifier 'lib'
              SelectedName
                Dot
                Identifier 'pkg'
              SelectedName
                Dot
                Identifier 'comp'
        Binding
          BindingIndication
            BindingUseClause
              Keyword(Use)
              EntityEntityAspect
                Keyword(Entity)
                Name
                  NameDesignatorPrefix
                    Identifier 'work'
                  SelectedName
                    Dot
                    Identifier 'bar'
          SemiColon
        VerificationUnitBinding
          VerificationUnitBindingIndication
            Keyword(Use)
            Keyword(Vunit)
            VerificationUnitList
              Name
                NameDesignatorPrefix
                  Identifier 'baz'
          SemiColon
        BlockConfiguration
          BlockConfigurationPreamble
            Keyword(For)
            Name
              NameDesignatorPrefix
                Identifier 'arch'
          BlockConfigurationEpilogue
            Keyword(End)
            Keyword(For)
            SemiColon
        ComponentConfigurationEpilogue
          Keyword(End)
          Keyword(For)
          SemiColon
      BlockConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
