vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_nested_block_configuration.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  for rtl(0)\n    for name(0 to 3)\n    end for;\n    for other_name\n    end for;\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'entity_name'
    Keyword(Is)
  ConfigurationDeclarationItems
    BlockConfiguration
      BlockConfigurationPreamble
        Keyword(For)
        Name
          NameDesignatorPrefix
            Identifier 'rtl'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      BlockConfigurationItem
        BlockConfiguration
          BlockConfigurationPreamble
            Keyword(For)
            Name
              NameDesignatorPrefix
                Identifier 'name'
              ParenthesizedName
                LeftPar
                AssociationList
                  AssociationElement
                    ActualPart
                      ActualPartExpression
                        BinaryExpression
                          LiteralExpression
                            AbstractLiteral '0'
                          Keyword(To)
                          LiteralExpression
                            AbstractLiteral '3'
                RightPar
          BlockConfigurationEpilogue
            Keyword(End)
            Keyword(For)
            SemiColon
      BlockConfigurationItem
        BlockConfiguration
          BlockConfigurationPreamble
            Keyword(For)
            Name
              NameDesignatorPrefix
                Identifier 'other_name'
          BlockConfigurationEpilogue
            Keyword(End)
            Keyword(For)
            SemiColon
      BlockConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
