vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_use_clause.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  use lib.foo.bar;\n  use lib2.foo.bar;\n  for rtl(0)\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'entity_name'
    Keyword(Is)
  Declarations
    UseClauseDeclaration
      UseClause
        Keyword(Use)
        NameList
          Name
            NameDesignatorPrefix
              Identifier 'lib'
            SelectedName
              Dot
              Identifier 'foo'
            SelectedName
              Dot
              Identifier 'bar'
        SemiColon
    UseClauseDeclaration
      UseClause
        Keyword(Use)
        NameList
          Name
            NameDesignatorPrefix
              Identifier 'lib2'
            SelectedName
              Dot
              Identifier 'foo'
            SelectedName
              Dot
              Identifier 'bar'
        SemiColon
  BlockConfiguration
    BlockConfigurationPreamble
      Keyword(For)
      Name
        NameDesignatorPrefix
          Identifier 'rtl'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '0'
          RightPar
    BlockConfigurationEpilogue
      Keyword(End)
      Keyword(For)
      SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
